# Hospital-Management-System

./: CMakeLists.txt  Hospital.cpp  Hospital.hpp  README.md  main.cpp
